--- a/config.toml
+++ b/config.toml
@@ -22,9 +22,9 @@ disqusShortname = "yourdiscussshortname"
     info = "Just a Developer"
     avatarurl = "images/avatar.jpg"
     #gravatar = "john.doe@example.com"
-    footercontent = "Enter a text here."
+    footercontent = ""
 
-    dateformat = "January 2, 2006"
+    dateformat = "2 Jan 2006"
 
     hideFooter = false
     hideCredits = false
@@ -32,7 +32,7 @@ disqusShortname = "yourdiscussshortname"
     since = 2019
 
     # Git Commit in Footer, uncomment the line below to enable it.
-    commit = "https://github.com/luizdepra/hugo-coder/tree/"
+    # commit = "https://github.com/luizdepra/hugo-coder/tree/"
 
     rtl = false
 
@@ -41,7 +41,7 @@ disqusShortname = "yourdiscussshortname"
     # "auto" (use preference set by browser)
     # "dark" (dark background, light foreground)
     # "light" (light background, dark foreground) (default)
-    colorscheme = "light"
+    colorscheme = "auto"
 
     # Series see also post count
     maxSeeAlsoItems = 5
@@ -57,9 +57,9 @@ disqusShortname = "yourdiscussshortname"
 
 # If you want to use fathom(https://usefathom.com) for analytics, add this section
 [params.fathomAnalytics]
-    siteID = "ABCDE"
+    # siteID = "ABCDE"
     # Default value is cdn.usefathom.com, overwrite this if you are self-hosting
-    serverURL = "analytics.example.com"
+    # serverURL = "analytics.example.com"
 
 [taxonomies]
   category = "categories"
@@ -70,34 +70,34 @@ disqusShortname = "yourdiscussshortname"
     name = "Github"
     icon = "fab fa-github"
     weight = 1
-    url = "https://github.com/johndoe/"
+    url = "https://github.com/jackielii/"
 [[params.social]]
     name = "Gitlab"
     icon = "fab fa-gitlab"
     weight = 2
-    url = "https://gitlab.com/johndoe/"
+    url = "https://gitlab.com/jackie.li/"
 [[params.social]]
     name = "Twitter"
     icon = "fab fa-twitter"
     weight = 3
-    url = "https://twitter.com/johndoe/"
+    url = "https://twitter.com/jackielii/"
 [[params.social]]
     name = "LinkedIn"
     icon = "fab fa-linkedin"
     weight = 4
-    url = "https://www.linkedin.com/in/johndoe/"
-[[params.social]]
-    name = "Medium"
-    icon = "fab fa-medium"
-    weight = 5
-    url = "https://medium.com/@johndoe"
-[[params.social]]
-    name = "RSS"
-    icon = "fas fa-rss"
-    weight = 6
-    url = "https://myhugosite.com/index.xml"
-    rel = "alternate"
-    type = "application/rss+xml"
+    url = "https://www.linkedin.com/in/jackie-li-82b10665/"
+# [[params.social]]
+#     name = "Medium"
+#     icon = "fab fa-medium"
+#     weight = 5
+#     url = "https://medium.com/@johndoe"
+# [[params.social]]
+#     name = "RSS"
+#     icon = "fas fa-rss"
+#     weight = 6
+#     url = "https://myhugosite.com/index.xml"
+#     rel = "alternate"
+#     type = "application/rss+xml"
 
 
 [languages]
@@ -127,35 +127,35 @@ disqusShortname = "yourdiscussshortname"
             url = "contact/"
 
 
-    [languages.pt-br]
-        languagename = "Português"
-        title = "João Ninguém"
+    [languages.zh-cn]
+        languagename = "中"
+        title = "李宇星"
 
-        [languages.pt-br.params]
-            author = "João Ninguém"
-            info = "Full Stack DevOps e Mágico"
-            description = "Sítio pessoal de João Ninguém"
-            keywords = "blog,desenvolvedor,pessoal"
-            footercontent = "Coloque algum texto aqui."
+        [languages.zh-cn.params]
+            author = "李宇星"
+            info = "就个程序员"
+            description = "描述?"
+            keywords = "想法, 心得"
+            footercontent = ""
 
-        [languages.pt-br.menu]
+        [languages.zh-cn.menu]
 
-            [[languages.pt-br.menu.main]]
-            name = "Sobre"
+            [[languages.zh-cn.menu.main]]
+            name = "我"
             weight = 1
             url = "about/"
 
-            [[languages.pt-br.menu.main]]
-            name = "Blog"
+            [[languages.zh-cn.menu.main]]
+            name = "随记"
             weight = 2
             url = "posts/"
 
-            [[languages.pt-br.menu.main]]
-            name = "Projetos"
+            [[languages.zh-cn.menu.main]]
+            name = "项目"
             weight = 3
             url = "projects/"
 
-            [[languages.pt-br.menu.main]]
-            name = "Contato"
+            [[languages.zh-cn.menu.main]]
+            name = "联系"
             weight = 5
             url = "contact/"
