--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ disqusShortname = "yourdiscussshortname"
 
 [params]
     author = "Jackie Li"
-    description = "John Doe's personal website"
+    description = "Jackie Li's notes for share"
     keywords = "blog,developer,personal"
     info = "Just a Developer"
     avatarurl = "images/avatar.jpg"
@@ -127,35 +127,35 @@ disqusShortname = "yourdiscussshortname"
             url = "contact/"
 
 
-    [languages.zh-cn]
-        languagename = "中"
-        title = "李宇星"
+    # [languages.zh-cn]
+    #     languagename = "中"
+    #     title = "李宇星"
 
-        [languages.zh-cn.params]
-            author = "李宇星"
-            info = "就个程序员"
-            description = "描述?"
-            keywords = "想法, 心得"
-            footercontent = ""
+    #     [languages.zh-cn.params]
+    #         author = "李宇星"
+    #         info = "就个程序员"
+    #         description = "描述?"
+    #         keywords = "想法, 心得"
+    #         footercontent = ""
 
-        [languages.zh-cn.menu]
+    #     [languages.zh-cn.menu]
 
-            [[languages.zh-cn.menu.main]]
-            name = "我"
-            weight = 1
-            url = "about/"
+    #         [[languages.zh-cn.menu.main]]
+    #         name = "我"
+    #         weight = 1
+    #         url = "about/"
 
-            [[languages.zh-cn.menu.main]]
-            name = "随记"
-            weight = 2
-            url = "posts/"
+    #         [[languages.zh-cn.menu.main]]
+    #         name = "随记"
+    #         weight = 2
+    #         url = "posts/"
 
-            [[languages.zh-cn.menu.main]]
-            name = "项目"
-            weight = 3
-            url = "projects/"
+    #         [[languages.zh-cn.menu.main]]
+    #         name = "项目"
+    #         weight = 3
+    #         url = "projects/"
 
-            [[languages.zh-cn.menu.main]]
-            name = "联系"
-            weight = 5
-            url = "contact/"
+    #         [[languages.zh-cn.menu.main]]
+    #         name = "联系"
+    #         weight = 5
+    #         url = "contact/"
