--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ pygmentsstyle = "b2"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
-disqusShortname = "jackieli"
+# disqusShortname = "jackieli"
 
 [params]
     author = "Jackie Li"
