--- a/config.toml
+++ b/config.toml
@@ -116,15 +116,15 @@ pygmentscodefencesguesssyntax = true
             weight = 2
             url = "posts/"
 
-            [[languages.en.menu.main]]
-            name = "Projects"
-            weight = 3
-            url = "projects/"
+            # [[languages.en.menu.main]]
+            # name = "Projects"
+            # weight = 3
+            # url = "projects/"
 
-            [[languages.en.menu.main]]
-            name = "Contact me"
-            weight = 5
-            url = "contact/"
+            # [[languages.en.menu.main]]
+            # name = "Contact me"
+            # weight = 5
+            # url = "contact/"
 
 
     # [languages.zh-cn]
