--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,7 @@ pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
 # disqusShortname = "jackieli"
+googleAnalytics = "UA-173573373-1"
 
 [params]
     author = "Jackie Li"
