--- a/config.toml
+++ b/config.toml
@@ -101,6 +101,11 @@ googleAnalytics = "UA-173573373-1"
 #     rel = "alternate"
 #     type = "application/rss+xml"
 
+[params.utterances]
+  repo = "jackielii/jackieli.dev" # https://utteranc.es/#heading-repository
+  issueTerm = "pathname" # https://utteranc.es/#heading-mapping
+  label = "" # https://utteranc.es/#heading-issue-label
+  theme = "github-light" # https://utteranc.es/#heading-theme
 
 [languages]
     [languages.en]
