--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ googleAnalytics = "UA-173573373-1"
     author = "Jackie Li"
     description = "Jackie Li's notes for share"
     keywords = "blog,developer,personal"
-    info = "I'm a Developer"
+    info = "Software engineer, coc.nvim enjoyer"
     avatarurl = "images/avatar.jpg"
     #gravatar = "john.doe@example.com"
     footercontent = ""
